# dinasour

./: CMakeLists.txt  README.md  apply_model.py  check_data.py  check_log.py  common.py  configurate_data.cpp  loaddata.cpp  model.py  train.py  train.sh
images/: resize_image.py
